--- a/WWW/lista2/tint-p01b-html5/01-simplepage.html
+++ b/WWW/lista2/tint-p01b-html5/01-simplepage.html
@@ -36,13 +36,14 @@
 	<div>Siakaś <mark>ważna</mark> treść</div>
 
 </article>
+
 <aside>Najczęściej odwiedzane
 <ul>
 <li><a href="#">Link1</a>
 <li><a href="#">Link2</a>
 <li><a href="#">Link3</a>
-</ul>
-<progress max="100" value="30"></progress>
+</ul> 
+<progress max="100" value="30"></progress><br/><br/>
 <meter min="100" max="200" value="150">50%</meter>
 </aside>
 </section>
