--- a/WWW/lista2/z2.html
+++ b/WWW/lista2/z2.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="pl">
 <head>
 	<title>Simple page</title>
@@ -17,80 +17,57 @@
 <body>
 
 	<form id="formm" onsubmit="return this.checkValidity()">
-		<label for="name">Name:</label>
-		<input type="text" id="name" name="name" placeholder="First name" pattern="[a-zA-Z ]{3,}" required />
+		<label for="name">Imię:</label>
+		<input type="text" id="name" name="name" placeholder="Imię" pattern="[a-zA-Z ]{3,}" required />
 		<div class="invalid">Pole jest wymagane i ma mieć co najmniej 3 znaki</div>
 
-		<label for="surname">Surname:</label>
-		<input type="text" id="surname" name="surname" placeholder="Surname" pattern="[a-zA-Z ]{3,}" required />
+		<label for="surname">Nazwisko:</label>
+		<input type="text" id="surname" name="surname" placeholder="Nazwisko" pattern="[a-zA-Z ]{3,}" required />
 		<div class="invalid">Pole jest wymagane i ma mieć co najmniej 3 znaki</div>
 
 		<label for="email">E-mail:</label>
-		<input type="email" id="email" name="email" placeholder="Email please..." required />
+		<input type="email" id="email" name="email" placeholder="Email" required />
 		<div class="invalid">Pole jest wymagane i ma być poprawnym mailem</div>
 
-		<label for="adress">Adress (just street and number):</label>
-		<input type="text" id="adress" name="adress" placeholder="adress" pattern="^[a-zA-Z .0-9,]{3,} [0-9/ ]{1,}$" required />
+		<label for="adress">Adres (ulica i numer domu/mieszkania):</label>
+		<input type="text" id="adress" name="adress" placeholder="adres" pattern="^[a-zA-Z .0-9,]{3,} [0-9/ ]{1,}$" required />
 		<div class="invalid">Podaj poprawnie nazwę ulicy i numer mieszkania</div>
 
-		<label for="postCode">Post code:</label>
-		<input type="text" id="postCode" name="postCode" placeholder="postCode" pattern="^[0-9]{2}-[0-9]{3}$" required />
+		<label for="postCode">Kod pocztowy:</label>
+		<input type="text" id="postCode" name="postCode" placeholder="nn-nnn" pattern="^[0-9]{2}-[0-9]{3}$" required />
 		<div class="invalid">Kod pocztowy musi być fromatu xx-xxx, gdzie x jest cyfrą</div>
 
 		<label for="date">Data przelewu:</label>
-		<input type="date" id="date" name="date"  max="2017-12-31" required />
+		<input type="date" id="date" name="date"  placeholder="rrrr-mm-dd" max="2017-12-31" required />
 		<div class="invalid">Wartość jest niepoprawna</div>
 
 		<label for="account">Numer konta</label>
-		<input type="text" id="account" account="account" placeholder="account" pattern="^[0-9]{26}$" required />
+		<input type="text" id="account" account="account" placeholder="numer konta" pattern="^[0-9]{26}$" required />
 		<div class="invalid">Pole jest wymagane i ma mieć 26 cyfr</div>
 
 		<label for="amount">Kwota i skrót waluty</label>
-		<input type="text" id="amount" amount="amount" placeholder="amount" pattern="^[0-9.,]{1,} [A-Z]{3}$" required />
+		<input type="text" id="amount" amount="amount" placeholder="kwota" pattern="^[0-9.,]{1,} [A-Z]{3}$" required />
 		<div class="invalid">Pole jest wymagane i ma format [kwota] WWW, gdzie WWW to skrót waluty</div>
 
-		<label for="url">URL:</label>
-		<input type="url" id="url" name="url" placeholder="URL please" required />
+		<label for="citie">Miasto</label>
+		<input type="text" id="datalist" name="cities" list="cities" placeholder="Miasto" pattern="[a-zA-Z ]{3,}" required />
 		<div class="invalid">Wartość jest niepoprawna</div>
+		<datalist id="cities">
+				<option value="Warszawa">
+				<option value="Kraków">
+				<option value="Łódź">
+				<option value="Wrocław">
+				<option value="Poznań">
+				<option value="Gdańsk">
+				<option value="Szczecin">
+				<option value="Bydgoszcz">
+				<option value="Lublin">
+				<option value="Katowice">
+		</datalist>
 
-		<label for="tel">Phone:</label>
-		<input type="tel" id="tel" name="tel" list="nazwa" placeholder="Phone please" required />
-		<div class="invalid">Wartość jest niepoprawna</div>
-			<select name="nazwa">
-			<option>Tu wpisz pierwszą możliwość</option>
-			<option>Tu wpisz drugą możliwość</option>
-
-
-
-
-		<label for="name">Name:</label>
-		<input type="text" id="name" name="name" placeholder="First name" pattern="[a-zA-Z ]{3,}" required />
-		<div class="invalid">Pole jest wymagane i ma mieć co najmniej 3 znaki</div>
-
-
-		<label for="range">Range:</label>
-		<input type="range" id="range" name="range" min="5" max="45" step="5" value="35" />
-		<div class="invalid">Wartość jest niepoprawna</div>
-
-		<label for="number">Number:</label>
-		<input type="number" id="number" name="number" min="5" max="45" step="5" list="nazwa" value="35" required />
-			<select name="nazwa">
-			<option>Tu wpisz pierwszą możliwość</option>
-			<option>Tu wpisz drugą możliwość</option>
-	</select>
-		<div class="invalid">Wartość jest niepoprawna</div>
-
-		<label for="number">Colours:</label>
-		<input type="text" id="datalist" name="colours" list="colours" placeholder="Phone please" required />
-		<div class="invalid">Wartość jest niepoprawna</div>
-		<datalist id="colours">
-			<option value="red">
-				<option value="green">
-					<option value="blue">
-					</datalist>
-
-					<button type="submit" id="submit" name="submit" onclick="">Wyślij</button>
-				</form>
+		<button type="submit" id="submit" name="submit" onclick="">Wyślij</button>
+		</form>
+		
 
 			</body>
 			</html>
